fiexd scroll bar in body

--- a/public/index.html
+++ b/public/index.html
@@ -26,7 +26,7 @@
     -->
     <title>Text-To-Speech</title>
   </head>
-  <body>
+  <body class="scrollbar-thin">
     <noscript>You need to enable JavaScript to run this app.</noscript>
     <div id="root"></div>
     <!--
